--- a/.travis.yml
+++ b/.travis.yml
@@ -5,4 +5,6 @@ node_js:
   - "iojs"
 script: 
   - "npm run build"
+  - "npm run build:tests:utils"
+  - "npm run build:tests"
   - "npm run coverage"
