--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "build": "mkdir -p build/ && babel src/otp.js --out-file build/index.js",
     "build:tests": "mkdir -p build/ && babel src/otp.spec.js --out-file build/spec.js",
-    "build:test:utils": "mkdir -p build/ && babel src/test-utils.js --out-file build/test-utils.js",
+    "build:tests:utils": "mkdir -p build/ && babel src/test-utils.js --out-file build/test-utils.js",
 
     "docs:md": "mkdir -p docs && documentation build ./src/index.js --format md --github -o docs/API.md",
     "docs:md:watch": "mkdir -p docs && documentation build -w ./src/index.js --format md --github -o docs/API.md",
@@ -25,7 +25,6 @@
     "babel-cli": "6.8.0",
     "babel-core": "6.23.1",
     "babel-eslint": "7.0.0",
-    "babel-loader": "6.0.1",
     "babel-plugin-external-helpers": "^6.22.0",
     "babel-plugin-ramda": "1.1.9",
     "babel-plugin-rewire": "1.0.0-rc-1",
