--- a/package.json
+++ b/package.json
@@ -25,22 +25,18 @@
     "babel-cli": "6.8.0",
     "babel-core": "6.23.1",
     "babel-eslint": "7.0.0",
-    "babel-plugin-external-helpers": "^6.22.0",
-    "babel-plugin-ramda": "1.1.9",
-    "babel-plugin-rewire": "1.0.0-rc-1",
     "babel-polyfill": "6.8.0",
     "babel-preset-es2015": "^6.22.0",
-    "babel-preset-latest": "^6.22.0",
     "babel-preset-stage-0": "6.0.15",
     "babel-register": "6.23.0",
     "debug": "^2.6.1",
     "documentation": "4.0.0-beta.18",
-    "eslint": "^3.17.1"
+    "eslint": "^3.17.1",
+    "tap": "10.0.2",
+    "eslint-plugin-import": "^2.2.0"
   },
   "dependencies": {
-    "eslint-plugin-import": "^2.2.0",
     "ramda": "0.23.0",
-    "redux-saga": "^0.14.3",
-    "tap": "10.0.2"
+    "redux-saga": "^0.14.3"
   }
 }
