--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "Boilerplate for ReactJS project with hot code reloading",
   "scripts": {
-    "build": "rollem",
-    "postbuild": "sed -ie \"s\/'build_TEMP'\/'\\.\\\/'/g\" build/test.js",
+    "build": "babel-node node_modules/.bin/rollem",
+    "postbuild": "sed -ie \"s/'build_TEMP'/'\\.\\/'/g\" build/test.js",
     "build:watch": "nodemon --watch src -q -x \"npm run build\"",
-    "dev": "rollem -w",
+    "dev": "babel-node node_modules/.bin/rollem -w",
     "docs:md": "mkdir -p docs && documentation build ./src/index.js --format md --github -o docs/API.md",
     "docs:md:watch": "mkdir -p docs && documentation build -w ./src/index.js --format md --github -o docs/API.md",
     "docs:html:watch": "mkdir -p docs && documentation serve -w ./src/index.js --format html",
@@ -20,7 +20,7 @@
     "otp"
   ],
   "devDependencies": {
-    "babel-cli": "6.8.0",
+    "babel-cli": "^6.8.0",
     "babel-core": "6.23.1",
     "babel-eslint": "7.0.0",
     "babel-plugin-external-helpers": "^6.22.0",
